// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compileShader includes the variable's chunks if it has them 1`] = `
"/*** BEGIN: anon (1) ***/
uniform float u_time;
/*** END: anon (1) ***/

void main()
{
  /*** BEGIN: anon (1) ***/
  float float_anon_1;
  {
    float value = 1.0;
    gl_Position = vec4(sin(u_time), 0.0, 0.0, 1.0);
    float_anon_1 = value;
  }
  /*** END: anon (1) ***/

}"
`;

exports[`compileShader includes the variable's chunks if it has them 2`] = `
"/*** BEGIN: anon (1) ***/
uniform float u_time;
/*** END: anon (1) ***/

void main()
{
  /*** BEGIN: anon (1) ***/
  float float_anon_1;
  {
    float value = 1.0;
    gl_FragColor = vec4(cos(u_time), 0.0, 0.0, 1.0);
    float_anon_1 = value;
  }
  /*** END: anon (1) ***/

}"
`;

exports[`compileShader returns a fragmentShader 1`] = `
"void main()
{
  /*** BEGIN: anon (1) ***/
  float float_anon_1;
  {
    float value = 1.0;
    float_anon_1 = value;
  }
  /*** END: anon (1) ***/

}"
`;

exports[`compileShader returns a vertexShader 1`] = `
"void main()
{
  /*** BEGIN: anon (1) ***/
  float float_anon_1;
  {
    float value = 1.0;
    float_anon_1 = value;
  }
  /*** END: anon (1) ***/

}"
`;
